# simple-qt-app

./: .gitignore  CMakeLists.txt  README.md  paths.txt
.github/workflows/: ci.yml  cmake-qt-ci.yml
src/: ButtonLogic.cpp  ButtonLogic.hpp  main.cpp
tests/: CMakeLists.txt  test_ButtonLogic.cpp
